--- a/Views/Admin/AdministrarEmpleados.cshtml
+++ b/Views/Admin/AdministrarEmpleados.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="~/css/dataTable.css" />
 
 <h1 class="titulo-tabla">Empleados</h1>
-
+<p style="text-align: center;">Maneja tus empleados.</p>
 <!-- Tabla de Empleados -->
 <div class="contenedor-tabla">
 <table id="tabla">
