--- a/Views/Admin/AdministrarRoles.cshtml
+++ b/Views/Admin/AdministrarRoles.cshtml
@@ -7,7 +7,7 @@
 
 
 <h1 class="titulo-tabla"> Roles</h1>
-
+<p style="text-align: center;">Visualiza los roles y administra los roles.</p>
 <!-- Tabla de Roles -->
 <div class="contenedor-tabla">
 <table id="tabla">
