--- a/Views/Admin/AdministrarTareas.cshtml
+++ b/Views/Admin/AdministrarTareas.cshtml
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="~/css/dataTable.css" />
 
 <h1 class="titulo-tabla">Tareas</h1>
-
+<p style="text-align: center;">Asigna las tareas a tus empleados.</p>
 
 @if (ViewData.ModelState.Any(x => x.Value.Errors.Count > 0))
 
