--- a/Views/Admin/AdministrarUsuarios.cshtml
+++ b/Views/Admin/AdministrarUsuarios.cshtml
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="~/css/dataTable.css" />
 
 <h1 class="titulo-tabla">Usuarios</h1>
-
+<p style="text-align: center;">Visualiza la informacion de los usuarios en especial su informacion de contacto.</p>
 <!-- Tabla de Usuarios -->
 <div class="contenedor-tabla">
     <table id="tabla">
