--- a/Views/Catalogo/AdministrarCategorias.cshtml
+++ b/Views/Catalogo/AdministrarCategorias.cshtml
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="~/css/dataTable.css" />
 
 <h1 class="titulo-tabla">Categorías</h1>
-
+<p style="text-align: center;">Administra las categorias de los productos de tu negocio.</p>
 <!-- Tabla de Categorías -->
 <div class="contenedor-tabla">
 <table id=tabla">
@@ -87,7 +87,6 @@
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <!-- Incluir DataTables JS -->
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-
 
 <script>
     const categoryModal = document.getElementById("categoryModal");
