--- a/Views/Catalogo/AdministrarCupones.cshtml
+++ b/Views/Catalogo/AdministrarCupones.cshtml
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="~/css/dataTable.css" />
 
 <h1 class="titulo-tabla">Cupones</h1>
-
+<p style="text-align: center;">Administra los cupones de tu negocio.</p>
 <!-- Tabla de Cupones -->
 <div class="contenedor-tabla">
 <table id="cuponTable">
