--- a/Views/Catalogo/AdministrarPlatos.cshtml
+++ b/Views/Catalogo/AdministrarPlatos.cshtml
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="~/css/dataTable.css" />
 
 <h1 class="titulo-tabla">Platos</h1>
-
+<p style="text-align: center;">Administra los platos de tu negocio.</p>
 <!-- Tabla de Platos  / SI FALLA ALGO ES POR EL ID-->
 <div class="contenedor-tabla">
 <table id="tabla">
