--- a/Views/Usuario/AccionesUsuario.cshtml
+++ b/Views/Usuario/AccionesUsuario.cshtml
@@ -77,6 +77,10 @@
                             <input type="email" name="Email" class="input" required />
                         </div>
                         <div class="group">
+                            <label class="label">Numero de Contacto</label>
+                            <input type="number" name="NumeroContacto" class="input" required />
+                        </div>
+                        <div class="group">
                             <label class="label">Contraseña</label>
                                 <input type="password" name="Contrasenia" placeholder="Mínimo 6 caracteres" class="input" required />
                         </div>
@@ -87,6 +91,7 @@
                         <div class="group">
                             <input type="submit" class="button" value="Registrarse" />
                         </div>
+                               
                     </div>
                 </form>
             </div>
